--- a/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.employee.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.employee.html
@@ -44,21 +44,21 @@
                                 <td>{{info.techlevel}}</td><!--技术等级-->
                                 <td>{{innfo.health}}</td><!--健康状况-->
                                 <td>{{info.worstatus}}</td><!--从业状态-->
-                                <td></td><!--驾驶证号-->
-                                <td></td><!--准驾车型-->
+                                <td>{{info.driverCardno}}</td><!--驾驶证号-->
+                                <td>{{info.driverVectype}}</td><!--准驾车型-->
                                 <td>{{info.driverFirstdate}}</td><!--驾驶证初领时间-->
                                 <td></td><!--从业资格证号-->
                                 <td></td><!--从业资格类别-->
                                 <td></td><!--核发日期-->
                                 <td></td><!--有效期起-->
                                 <td></td><!--有效期止-->
-                                <td></td><!--证照状态-->
+                                <td>{{info.licstatus}}</td><!--证照状态-->
                                 <td></td><!--发证机关-->
                                 <td></td><!--补换证次数-->
                                 <td></td><!--管理机构-->
-                                <td></td><!--资格等级-->
+                                <td>{{info.beworlevel}}</td><!--资格等级-->
                                 <td></td><!--档案号-->
-                                <td></td><!--考生区域-->
+                                <td>{{info.areacode}}</td><!--考生区域-->
                                 <td></td><!--从业资格范围-->
                                 <td>{{innfo.insertDate}}</td><!--时间戳-->
                                 <td>{{info.editime}}</td><!--修改时间-->
@@ -68,7 +68,7 @@
                                 <td>{{info.credate}}</td><!--创建日期-->
                                 <td>{{info.creusrcode}}</td><!--创建人-->
                                 <td>{{infoiseffect}}</td><!--是否有效-->
-                                <td></td><!--职位-->
+                                <td>{{info.duty}}</td><!--职位-->
                                 <td>{{info.reportYear}}</td><!--考核年度-->
                                 <td>{{info.reportLevel}}</td><!--考核等级-->
                                 <td>{{info.reportStatus}}</td><!--考核状态-->
