--- a/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.vehicle.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.vehicle.html
@@ -47,8 +47,19 @@
                             <td>{{info.recorder}}</td><!--记录人-->
                             <td>{{info.alllostmoney}}</td><!--直接经济损失-->
                             <td>{{info.accDetail}}</td><!--事故责任与性质-->
-                            <td></td><!--修改日期-->
-                            <td></td><!--修改时间-->
+                            <td>{{info.roadcondition}}</td><!--路况-->
+                            <td></td><!--二级维护情况-->
+                            <td>{{info.weather}}</td><!--天气情况-->
+                            <td>{{info.slightinjurynum}}</td><!--轻伤人数-->
+                            <td>{{info.seriousinjurynum}}</td><!--重伤人数-->
+                            <td>{{info.remark}}</td><!--备注-->
+                            <td>{{info.iseffect}}</td><!--是否有效-->
+                            <td></td><!--创建人-->
+                            <td>{{info.credate}}</td><!--创建日期-->
+                            <td>{{info.cretime}}</td><!--创建时间-->
+                            <td></td><!--修改人-->
+                            <td>{{info.edidate}}</td><!--修改日期-->
+                            <td>{{info.editime}}</td><!--修改时间-->
                             <td>{{info.auditStatus}}</td><!--审核状态-->
                             <td>{{info.auditContent}}</td><!--审核意见-->
                             <td></td><!--从业资格证号-->
@@ -99,7 +110,7 @@
                             <td>{{info.remark}}</td><!--备注-->
                             <td>{{info.reportYear}}</td><!--考核年度-->
                             <td></td><!--业户-->
-                            <td></td><!--整改开始时间-->
+                            <td>{{info.reformStart}}</td><!--整改开始时间-->
                             <td></td><!--下发日期-->
                             <td>{{info.commitDate}}</td><!--报告提交日期-->
                             <td>{{innfo.reformContent}}</td><!--整改报告-->
@@ -108,18 +119,18 @@
                             <td></td><!--验收时间-->
                             <td>{{ifo.reformStatus}}</td><!--整改状态-->
                             <td></td><!--整改结束时间-->
-                            <td></td><!--时间戳-->
+                            <td>{{info.insertDate}}</td><!--时间戳-->
                             <td>{{info.editime}}</td><!--修改时间-->
                             <td>{{info.edidate}}</td><!--修改日期-->
                             <td></td><!--修改人-->
-                            <td></td><!--创建时间-->
-                            <td></td><!--创建日期-->
+                            <td>{{info.credate}}</td><!--创建时间-->
+                            <td>{{info.cretime}}</td><!--创建日期-->
                             <td></td><!--创建人-->
                             <td>{{info.iseffect}}</td><!--是否有效-->
                             <td></td><!--检查机构-->
                             <td></td><!--验收意见-->
                             <td></td><!--系统评分-->
-                            <td></td><!--考核等级-->
+                            <td>{{info.creditLevel}}</td><!--考核等级-->
                         </tr>
                         </tbody>
                     </table>
