--- a/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
@@ -33,18 +33,18 @@
                 <div style="margin-left:30px;">
                   <div style="margin-top:30px;">
                     <p>累计港口泊位数</p>
-                    <p style="font-size: 30px;">4320</p>
-                    <p><span style="color:#ff6666">10%</span>&nbsp;&nbsp; 同比上月</p>
+                    <p style="font-size: 30px;">{{param.leftInfo.ljgkbws}}</p>
+                    <p><span style="color:#ff6666">{{param.leftInfo.ljgkbwsRate}}</span>&nbsp;&nbsp; 同比上月</p>
                   </div>
                   <div style="margin-top:30px;">
                     <p>增加的报告期</p>
-                    <p style="font-size: 30px;">4320</p>
-                    <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
+                    <p style="font-size: 30px;">{{param.leftInfo.zjdbgq}}</p>
+                    <p><span style="color:#1e983b">{{param.leftInfo.zjdbgqRate}}</span>&nbsp;&nbsp; 同比上周</p>
                   </div>
                   <div style="margin-top:30px;">
                     <p>报废的报告期</p>
-                    <p style="font-size: 30px;">4320</p>
-                    <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
+                    <p style="font-size: 30px;">{{param.leftInfo.bfdbgq}}</p>
+                    <p><span style="color:#1e983b">{{param.leftInfo.bfdbgqRate}}</span>&nbsp;&nbsp; 同比上周</p>
                   </div>
                 </div>
               </div>
