--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/daterangepicker.css">
   <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
+  <link rel="stylesheet" href="css/bootstrap-multiselect.css">
   <link rel="stylesheet" href="css/animate.css" type="text/css" />
   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
   <link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" />
@@ -80,6 +81,7 @@
   <script  src="js/controllers/moment.js"></script>
   <script  src="js/controllers/daterangepicker.js"></script>
   <script  src="js/controllers/bootstrap-datetimepicker.js"></script>
+  <script  src="js/controllers/bootstrap-multiselect.js"></script>
   <script  src="js/controllers/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="http://www.nbmap.gov.cn/leaflet/leaflet.js"></script>
   <script  src="js/controllers/leaflet.awesome-markers.js"></script>
