--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/aside.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/aside.html
@@ -36,6 +36,12 @@
             <a ui-sref="app.page.profile">Profile</a>
           </li>
           <li>
+            <a ui-sref="app.newUser">NewUser</a>
+          </li>
+          <li>
+            <a ui-sref="app.userList">UserList</a>
+          </li>
+          <li>
             <a href>
               <span class="badge bg-danger pull-right">3</span>
               Notifications
