--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/aside.music.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/aside.music.html
@@ -28,6 +28,12 @@
           <a ui-sref="app.page.profile">Profile</a>
         </li>
         <li>
+          <a ui-sref="app.newUser">NewUser</a>
+        </li>
+        <li>
+          <a ui-sref="app.userList">UserList</a>
+        </li>
+        <li>
           <a ui-sref="app.docs">
             <span class="label bg-info pull-right">new</span>
             Help
