新建与修改用户  用户列表

--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
@@ -40,10 +40,10 @@
           <a ui-sref="app.page.profile">Profile</a>
         </li>
         <li>
-          <a ui-sref="app.newUser">NewUser</a>
+          <a ui-sref="access.newUser">NewUser</a>
         </li>
         <li>
-          <a ui-sref="app.userList">UserList</a>
+          <a ui-sref="access.userList">UserList</a>
         </li>
         <li>
           <a ui-sref="app.docs">
