--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="css/bootstrap-3.3.2.min.css" type="text/css" />
+
   <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/daterangepicker.css">
   <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
@@ -33,6 +35,7 @@
 
   <!-- jQuery -->
   <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/jquery/jquery-2.1.3.min.js"></script>
 
 
   <!-- Angular -->
@@ -48,6 +51,7 @@
 
   <!-- bootstrap -->
   <script src="vendor/angular/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="vendor/angular/angular-bootstrap/bootstrap-3.3.2.min.js"></script>
   <!-- lazyload -->
   <script src="vendor/angular/oclazyload/ocLazyLoad.js"></script>
   <!-- translate -->
