--- a/beauty-project2/tra/src/main/webapp/tpl/page_signin.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/page_signin.html
@@ -4,78 +4,81 @@
   .pdt20{padding-top:20px;}
   .lh80{line-height: 80px;}
 </style>
-<div class="container " ng-controller="SigninFormController" ng-init="app.settings.container = false;">
-  <div class="row">
-    <div class="col-lg-3">
-      <div class="navEntry pdt20"  ui-sref="app.sjtystjfxjc">
-        <a >省交通运输统计分析<br>
-          监测与投资计划管理系统</a>
+<div class=" " ng-controller="SigninFormController" ng-init="app.settings.container = false;" style="background: url('img/bgimg.jpg');background-size:100% 100%;position: absolute;top:-50px;width:100%;height:108%;">
+  <div class="container" style="margin-top:100px;">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="navEntry pdt20"  ui-sref="app.sjtystjfxjc">
+          <a >省交通运输统计分析<br>
+            监测与投资计划管理系统</a>
+        </div>
+        <div class="navEntry mt10 pdt20" ui-sref="app.waterway_administration">
+          <a >湖南省<br>水路运政管理信息系统
+          </a>
+        </div>
+        <div class="navEntry mt10 pdt20" ui-sref="app.hunan_transport">
+          <a >湖南省公路水路建设<br>与运输市场信息服务系统
+          </a>
+        </div>
+        <div class="navEntry mt10 lh80" ui-sref="app.three_level_coordinated_management">
+          <a >省道路运输三级协同管理系统</a>
+        </div>
+        <div class="navEntry mt10 lh80" ui-sref="app.kylwsp">
+          <a >省客运联网售票系统</a>
+        </div>
+        <div class="navEntry mt10 lh80" ui-sref="app.zhgj({index:4})">
+          <a >区站场视频监控</a>
+        </div>
       </div>
-      <div class="navEntry mt10 pdt20" ui-sref="app.waterway_administration">
-        <a >湖南省<br>水路运政管理信息系统
-        </a>
-      </div>
-      <div class="navEntry mt10 pdt20" ui-sref="app.hunan_transport">
-        <a >湖南省公路水路建设<br>与运输市场信息服务系统
-        </a>
-      </div>
-      <div class="navEntry mt10 lh80" ui-sref="app.three_level_coordinated_management">
-        <a >省道路运输三级协同管理系统</a>
-      </div>
-      <div class="navEntry mt10 lh80" ui-sref="app.kylwsp">
-        <a >省客运联网售票系统</a>
-      </div>
-      <div class="navEntry mt10 lh80" ui-sref="app.zhgj({index:4})">
-        <a >区站场视频监控</a>
-      </div>
-    </div>
-    <div class="col-lg-6">
-      <div style="width:70%;margin:0 auto;">
-        <a href class="navbar-brand block m-t">{{app.name}}</a>
-        <div class="m-b-lg">
-          <div class="wrapper text-center">
-            <strong>请输入用户名和密码登陆</strong>
+      <div class="col-lg-6">
+        <div style="width:70%;margin:0 auto;">
+          <a href class="navbar-brand block m-t">{{app.name}}</a>
+          <div class="m-b-lg">
+            <div class="wrapper text-center">
+              <strong>请输入用户名和密码登陆</strong>
+            </div>
+            <form name="form" class="form-validation">
+              <div class="text-danger wrapper text-center" ng-show="authError">
+                {{authError}}
+              </div>
+              <div class="list-group list-group-sm">
+                <div class="list-group-item">
+                  <input type="text" placeholder="用户名" class="form-control no-border" ng-model="user.username" required>
+                </div>
+                <div class="list-group-item">
+                  <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" ng-disabled='form.$invalid'>登陆</button>
+              <div class="text-center m-t m-b"><a ui-sref="access.forgotpwd">忘记密码?</a></div>
+              <div class="line line-dashed"></div>
+              <!--      <p class="text-center"><small>Do not have an account?</small></p>-->
+              <!--      <a ui-sref="access.signup" class="btn btn-lg btn-default btn-block">Create an account</a>-->
+            </form>
           </div>
-          <form name="form" class="form-validation">
-            <div class="text-danger wrapper text-center" ng-show="authError">
-              {{authError}}
-            </div>
-            <div class="list-group list-group-sm">
-              <div class="list-group-item">
-                <input type="text" placeholder="用户名" class="form-control no-border" ng-model="user.username" required>
-              </div>
-              <div class="list-group-item">
-                <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" ng-disabled='form.$invalid'>登陆</button>
-            <div class="text-center m-t m-b"><a ui-sref="access.forgotpwd">忘记密码?</a></div>
-            <div class="line line-dashed"></div>
-            <!--      <p class="text-center"><small>Do not have an account?</small></p>-->
-            <!--      <a ui-sref="access.signup" class="btn btn-lg btn-default btn-block">Create an account</a>-->
-          </form>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="navEntry mt10 lh80" ui-sref="app.gsglll">
+          <a >高速公路流量观测系统</a>
+        </div>
+        <div class="navEntry mt10 lh80" ui-sref="app.highway_project_management">
+          <a >常德市公路工程项目管理平台</a>
+        </div>
+        <div class="navEntry mt10 lh80" ui-sref="app.zhgj">
+          <a >智慧公交系统</a>
+        </div>
+        <div class="navEntry mt10 lh80" ui-sref="app.water_transportation">
+          <a >水运AIS系统</a>
+        </div>
+        <div class="navEntry mt10 pdt20" ui-sref="app.throughput">
+          <a >湖南省港口企业<br>与码头单位吞吐量报表
+          </a>
         </div>
       </div>
     </div>
-    <div class="col-lg-3">
-      <div class="navEntry mt10 lh80" ui-sref="app.gsglll">
-        <a >高速公路流量观测系统</a>
-      </div>
-      <div class="navEntry mt10 lh80" ui-sref="app.highway_project_management">
-        <a >常德市公路工程项目管理平台</a>
-      </div>
-      <div class="navEntry mt10 lh80" ui-sref="app.zhgj">
-        <a >智慧公交系统</a>
-      </div>
-      <div class="navEntry mt10 lh80" ui-sref="app.water_transportation">
-        <a >水运AIS系统</a>
-      </div>
-      <div class="navEntry mt10 pdt20" ui-sref="app.throughput">
-        <a >湖南省港口企业<br>与码头单位吞吐量报表
-        </a>
-      </div>
-    </div>
   </div>
+
 
 <!--  <div class="text-center" ng-include="'tpl/blocks/page_footer.html'"></div>-->
 </div>
