--- a/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
@@ -15,13 +15,13 @@
               <div class="col-sm-3">
                 <div class="input-group">
                   <span style="line-height: 30px;display: inline-block;margin-left:25px;">港口企业</span>
-                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-left:30px;float: right;" ng-model="qsbwzkParam.gkqy">
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-left:30px;float: right;" ng-model="qsbwzkDTO.gkqy">
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="input-group">
                   <span style="line-height: 30px;display: inline-block">码头单位</span>
-                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;" ng-model="qsbwzkParam.mtdw">
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;" ng-model="qsbwzkDTO.mtdw">
                   <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button" ng-click="searchQsbwzkData()">搜索</button>
                 </span>
