--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
@@ -24,36 +24,36 @@
       </a>
       <!-- dropdown -->
       <ul class="dropdown-menu animated fadeInRight w">
-        <li class="wrapper b-b m-b-sm bg-light m-t-n-xs">
-          <div>
-            <p>300mb of 500mb used</p>
-          </div>
-          <progressbar value="60" class="progress-xs m-b-none bg-white"></progressbar>
+<!--        <li class="wrapper b-b m-b-sm bg-light m-t-n-xs">-->
+<!--          <div>-->
+<!--            <p>300mb of 500mb used</p>-->
+<!--          </div>-->
+<!--          <progressbar value="60" class="progress-xs m-b-none bg-white"></progressbar>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href>-->
+<!--            <span class="badge bg-danger pull-right">30%</span>-->
+<!--            <span>Settings</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a ui-sref="app.page.profile">Profile</a>-->
+<!--        </li>-->
+        <li>
+          <a ui-sref="access.newUser">新建用户</a>
         </li>
         <li>
-          <a href>
-            <span class="badge bg-danger pull-right">30%</span>
-            <span>Settings</span>
-          </a>
+          <a ui-sref="access.userList">用户列表</a>
         </li>
-        <li>
-          <a ui-sref="app.page.profile">Profile</a>
-        </li>
-        <li>
-          <a ui-sref="access.newUser">NewUser</a>
-        </li>
-        <li>
-          <a ui-sref="access.userList">UserList</a>
-        </li>
-        <li>
-          <a ui-sref="app.docs">
-            <span class="label bg-info pull-right">new</span>
-            Help
-          </a>
-        </li>
+<!--        <li>-->
+<!--          <a ui-sref="app.docs">-->
+<!--            <span class="label bg-info pull-right">new</span>-->
+<!--            Help-->
+<!--          </a>-->
+<!--        </li>-->
         <li class="divider"></li>
         <li>
-          <a ng-click="loginOut()">Logout</a>
+          <a ng-click="loginOut()">退出登陆</a>
         </li>
       </ul>
       <!-- / dropdown -->
