--- a/beauty-project2/tra/src/main/webapp/tpl/tra/newUser.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/newUser.html
@@ -59,6 +59,16 @@
                     </div>
                     <div class="list-group-item" ng-if="userInfo.userType=='管理员'">
                         <div class="row">
+                            <p class="col-lg-3"><span style="margin-left:10px;">角色：</span></p>
+                            <div class="col-lg-9">
+                                <input type="text" placeholder="角色" class="form-control no-border"
+                                       style="border-color:#31708f;border-width:1px"
+                                       ng-model="param.editUserInfo.userType" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-group-item" ng-if="userInfo.userType=='管理员'">
+                        <div class="row">
                             <p class="col-lg-3"><span style="margin-left:10px;">权限：</span></p>
                             <div class="col-lg-9">
                                 <select id="sel_search_orderstatus"  multiple="multiple" size="5">
