--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
@@ -25,10 +25,10 @@
       <!-- dropdown -->
       <ul class="dropdown-menu animated fadeInRight w">
           <li>
-              <a ui-sref="access.newDepartment" ng-if="userInfo.userType=='管理员'">新建部门</a>
+              <a ui-sref="access.newDepartment" ng-if="userInfo.userType=='管理员'">部门管理</a>
           </li>
           <li>
-              <a ui-sref="access.newRole" ng-if="userInfo.userType=='管理员'">新建角色</a>
+              <a ui-sref="access.newRole" ng-if="userInfo.userType=='管理员'">角色管理</a>
           </li>
           <li>
             <a ui-sref="access.newUser" ng-if="userInfo.userType=='管理员'">新建用户</a>
