--- a/beauty-project2/tra/src/main/webapp/tpl/tra/newRole.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/newRole.html
@@ -10,16 +10,15 @@
         <a href class="navbar-brand block m-t">{{app.name}}</a>
         <div class="m-b-lg">
             <div class="wrapper text-center">
-                <strong>请输入用户名和密码登陆</strong>
+                <strong>请新增或修改要管理的角色</strong>
             </div>
             <form name="form" class="form-validation">
                 <div class="text-danger wrapper text-center" ng-show="authError">
-
                 </div>
                 <div class="list-group list-group-sm">
                     <div class="list-group-item">
                         <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">用户名：</span></p>
+                            <p class="col-lg-3"><span style="margin-left:10px;">角色名称：</span></p>
                             <div class="col-lg-9">
                                 <input type="text" placeholder="用户名" class="form-control no-border"
                                        style="border-color:#31708f;border-width:1px"
@@ -27,33 +26,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="list-group-item">
-                        <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">登录名：</span></p>
-                            <div class="col-lg-9">
-                                <input type="text" placeholder="登录名" class="form-control no-border"
-                                       style="border-color:#31708f;border-width:1px"
-                                       ng-model="param.editUserInfo.loginName" required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list-group-item">
-                        <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">密码：</span></p>
-                            <div class="col-lg-9">
-                                <input type="password" placeholder="密码" class="form-control no-border"
-                                       style="border-color:#31708f;border-width:1px"
-                                       ng-model="param.editUserInfo.password" required>
-                            </div>
-                        </div>
-                    </div>
                     <div class="list-group-item" ng-if="userInfo.userType=='管理员'">
                         <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">部门：</span></p>
+                            <p class="col-lg-3"><span style="margin-left:10px;">选中已有的角色：</span></p>
                             <div class="col-lg-9">
-                                <input type="text" placeholder="部门" class="form-control no-border"
-                                       style="border-color:#31708f;border-width:1px"
-                                       ng-model="param.editUserInfo.userType" required>
+                                <select id="sel_search_orderstatus_1"  multiple="single" size="5">
+                                    <option ng-repeat='(index,info) in  param.data' value="{{info.id}}" ng-selected ="param.selectLevel[index]">{{info.name}}</option>
+                                </select>
                             </div>
                         </div>
                     </div>
