--- a/beauty-project2/tra/src/main/webapp/tpl/tra/newDepartment.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/newDepartment.html
@@ -10,7 +10,7 @@
         <a href class="navbar-brand block m-t">{{app.name}}</a>
         <div class="m-b-lg">
             <div class="wrapper text-center">
-                <strong>请新增或修改要管理的部门(若不选择则为新建部)</strong>
+                <strong>请新增或修改要管理的部门(若不选择则为新建部门)</strong>
             </div>
             <form name="form" class="form-validation">
                 <div class="text-danger wrapper text-center" ng-show="authError">
