--- a/beauty-project2/tra/src/main/webapp/tpl/tra/newRole.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/newRole.html
@@ -10,7 +10,7 @@
         <a href class="navbar-brand block m-t">{{app.name}}</a>
         <div class="m-b-lg">
             <div class="wrapper text-center">
-                <strong>请新增或修改要管理的角色</strong>
+                <strong>请新增或修改要管理的角色(若不选择则为新建角色)</strong>
             </div>
             <form name="form" class="form-validation">
                 <div class="text-danger wrapper text-center" ng-show="authError">
@@ -22,16 +22,16 @@
                             <div class="col-lg-9">
                                 <input type="text" placeholder="用户名" class="form-control no-border"
                                        style="border-color:#31708f;border-width:1px"
-                                       ng-model="param.editUserInfo.nickname" required>
+                                       ng-model="param.roleInfo.roleName" required>
                             </div>
                         </div>
                     </div>
                     <div class="list-group-item" ng-if="userInfo.userType=='管理员'">
                         <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">选中已有的角色：</span></p>
+                            <p class="col-lg-3"><span style="margin-left:10px;">选中角色：</span></p>
                             <div class="col-lg-9">
-                                <select id="sel_search_orderstatus_1"  multiple="single" size="5">
-                                    <option ng-repeat='(index,info) in  param.data' value="{{info.id}}" ng-selected ="param.selectLevel[index]">{{info.name}}</option>
+                                <select id="sel_search_role" size="5">
+                                    <option ng-repeat='(index,info) in  param.roleData' value="{{info.id}}">{{info.roleName}}</option>
                                 </select>
                             </div>
                         </div>
@@ -40,16 +40,15 @@
                         <div class="row">
                             <p class="col-lg-3"><span style="margin-left:10px;">权限：</span></p>
                             <div class="col-lg-9">
-                                <select id="sel_search_orderstatus"  multiple="multiple" size="5">
-                                    <option ng-repeat='(index,info) in  param.data' value="{{info.id}}" ng-selected ="param.selectLevel[index]">{{info.name}}</option>
+                                <select id="sel_search_level"  multiple="multiple" size="5">
+                                    <option ng-repeat='(index,info) in  param.data' value="{{info.id}}"
+                                            ng-selected ="param.selectLevel[index]">{{info.name}}</option>
                                 </select>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-lg btn-primary btn-block"   ng-if="param.id==''" ng-click="newUser()">新建</button>
-                <button type="submit" class="btn btn-lg btn-primary btn-block"   ng-if="param.id!=''" ng-click="modifyUser()">修改</button>
-
+                <button type="submit" class="btn btn-lg btn-primary btn-block"  ng-click="newRole()">新建或修改</button>
                 <div class="line line-dashed"></div>
 
             </form>
