--- a/beauty-project2/tra/src/main/webapp/tpl/tra/newRole.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/newRole.html
@@ -18,7 +18,7 @@
                 <div class="list-group list-group-sm">
                     <div class="list-group-item">
                         <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">角色名称：</span></p>
+                            <p class="col-lg-3"><span>角色名称：</span></p>
                             <div class="col-lg-9">
                                 <input type="text" placeholder="用户名" class="form-control no-border"
                                        style="border-color:#31708f;border-width:1px"
@@ -28,10 +28,10 @@
                     </div>
                     <div class="list-group-item" ng-if="userInfo.userType=='管理员'">
                         <div class="row">
-                            <p class="col-lg-3"><span style="margin-left:10px;">选中角色：</span></p>
+                            <p class="col-lg-3"><span>选中角色：</span></p>
                             <div class="col-lg-9">
                                 <select id="sel_search_role" size="5">
-                                    <option ng-repeat='(index,info) in  param.roleData' value="{{info.id}}">{{info.roleName}}</option>
+                                    <option ng-repeat='info in param.roleData' value="{{info.id}}">{{info.roleName}}</option>
                                 </select>
                             </div>
                         </div>
@@ -40,9 +40,9 @@
                         <div class="row">
                             <p class="col-lg-3"><span style="margin-left:10px;">权限：</span></p>
                             <div class="col-lg-9">
-                                <select id="sel_search_level"  multiple="multiple" size="5">
-                                    <option ng-repeat='(index,info) in  param.data' value="{{info.id}}"
-                                            ng-selected ="param.selectLevel[index]">{{info.name}}</option>
+                                <select id="sel_search_level" multiple="multiple" size="5">
+                                    <option ng-repeat='info in param.data' value="{{info.id}}"
+                                            ng-selected ="info.selectFlag">{{info.name}}</option>
                                 </select>
                             </div>
                         </div>
