--- a/beauty-project2/tra/src/main/webapp/tpl/tra/zhgj.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/zhgj.html
@@ -14,7 +14,7 @@
     <p class="m-b-md">
       <strong>首页 / 其他交通 / 智慧公交 / 基础信息</strong>
       &nbsp;&nbsp;&nbsp;&nbsp;
-      <a ng-href="{{param.url}}" style="color:red;font-weight:bold">点击去往智慧公交平台</a>
+      <a ng-click="goThirdPlatform()" style="color:red;font-weight:bold">点击去往智慧公交平台</a>
     </p>
     <div style="position: relative;">
       <div id="mapDiv" style="width:100%;height:600px"></div>
