--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
@@ -14,15 +14,17 @@
 <div class="collapse pos-rlt navbar-collapse box-shadow {{app.settings.navbarCollapseColor}}">
   <!-- nabar right -->
   <ul class="nav navbar-nav navbar-right">
-      <a ng-click="goThirdPlatform()" style="color:red;font-weight:bold" ng-if="goThirdPlatformName!=''">点击去往{{goThirdPlatformName}}</a>
       <li class="dropdown" dropdown>
           <a href class="dropdown-toggle clear" dropdown-toggle>
               <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
                 <img src="img/a0.jpg" alt="...">
                 <i class="on md b-white bottom"></i>
               </span>
-        <span class="hidden-sm hidden-md">{{userInfo.nickname}}</span> <b class="caret"></b>
-      </a>
+              <span class="hidden-sm hidden-md">{{userInfo.nickname}}</span>
+              <b class="caret"></b>
+              <a ng-click="goThirdPlatform()" style="color: red;font-weight: bold;margin-left: -440px;position: absolute;margin-top: -50px;"
+                 ng-if="goThirdPlatformName!=''">点击去往{{goThirdPlatformName}}</a>
+          </a>
           <!-- dropdown -->
           <ul class="dropdown-menu animated fadeInRight w">
           <li>
